[gd_scene load_steps=35 format=2]

[ext_resource path="res://World1.gd" type="Script" id=1]
[ext_resource path="res://ChavesTexto.gd" type="Script" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://sprites/Mundo/Labirinto 01.png" type="Texture" id=4]
[ext_resource path="res://sprites/Mundo/Casa 01.png" type="Texture" id=5]
[ext_resource path="res://sprites/Objetos/Chave.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/Objetos/Port√£o.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/Objetos/Placa Madeira.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/Objetos/Lanterna.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/Objetos/Gato.tscn" type="PackedScene" id=13]
[ext_resource path="res://Music and Sounds/Ambience/FOREST2.mp3" type="AudioStream" id=14]
[ext_resource path="res://sprites/Mundo/Arvore3.png" type="Texture" id=15]
[ext_resource path="res://sprites/Mundo/Arvore1.png" type="Texture" id=16]
[ext_resource path="res://sprites/Mundo/Chave.png" type="Texture" id=17]
[ext_resource path="res://Star.tscn" type="PackedScene" id=18]
[ext_resource path="res://PrimeiroPortao.tscn" type="PackedScene" id=19]

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Poppins-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = SubResource( 16 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;
uniform float multiplier = 0.2;
uniform float softness = 3.0;

void fragment()
{
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/color = null
shader_param/multiplier = -0.061
shader_param/softness = 0.115

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.8101, 23.0898 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20.6093, 17.9132 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14.1878, 12.6578 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14.3672, 11.5831 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8.15324, 20.6132 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7.29912, 17.6874 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 24.1644, 11.7917 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 46.1733, 25.0751 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 23.5547, 22.5219 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 14.5589, 13.3375 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 20.8347, 22.9606 )

[node name="World" type="Node2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )

[node name="ExternalArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ExternalArea"]
polygon = PoolVector2Array( 40, -68.5714, 40, 471.429, 728.571, 471.429, 735.714, 424.286, 734.286, -74.2857 )

[node name="InternalArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InternalArea"]
polygon = PoolVector2Array( 40, 474.286, -268.571, 475.714, -285.714, -117.143, 37.1429, -82.8571, 38.5714, -40 )

[node name="Labirinto 01" type="Sprite" parent="."]
position = Vector2( 385.714, 201.429 )
texture = ExtResource( 4 )

[node name="Paredes" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( -51.4286, 84.2857, -51.4286, 115.714, -104.286, 117.143, -104.286, 128.571, -138.571, 128.571, -138.571, 120, -135.714, 115.714, -210, 117.143, -210, 150, -224.286, 151.429, -225.714, 274.286, -160, 272.857, -158.571, 304.286, -192.857, 304.286, -192.857, 311.429, -211.429, 311.429, -215.714, 312.857, -215.714, 322.857, -224.286, 322.857, -225.714, 444.286, -200, 444.286, -200, 464.286, 35.7143, 464.286, 35.7882, 455.763, 35.7143, 432.857, 41.4286, 432.857, 41.4286, 450.174, 41.4286, 471.429, 30, 474.286, -230, 478.571, -260, 458.571, -254.286, 361.429, -254.286, 324.286, -252.857, 211.429, -250, 118.571, -248.571, 18.5714, -248.571, -50, -247.143, -91.4286, -184.286, -115.714, -84.2857, -111.429, -10, -100, 32.8571, -97.1429, 65.7143, -68.5714, 65.7143, 80, 58.5714, 80, 58.5714, 84.2857, 41.4286, 84.2857, 41.4286, 204.286, 51.4286, 214.286, 54.2857, 221.429, 44.2857, 224.286, 40, 228.571, 41.4286, 412.857, 37.1429, 412.857, 37.1429, 302.857, 25.7143, 302.857, 25.7143, 322.857, -18.5714, 322.857, -18.5714, 302.857, -131.429, 304.286, -130, 274.286, 37.1429, 274.286, 37.1429, 157.143, 15.7143, 158.571, 15.7143, 117.143, -21.4286, 115.714, -21.4286, 84.2857, 37.1429, 84.2857, 37.1429, -30, -2.85714, -30, -20, -35.7143, -25.7143, -38.5714, -24.2857, -52.8571, -185.714, -52.8571, -185.714, -8.57143, -207.143, -8.57143, -224.286, 2.85714, -225.714, 47.1429, -210, 47.1429, -211.429, 82.8572, -208.571, 84.2857 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 97.1429, 384.286, 97.1429, 412.857, 122.857, 411.429, 124.286, 251.429, 172.857, 251.429, 172.857, 232.857, 128.571, 231.429, 128.571, 155.714, 127.143, 67.1429, 128.571, -35.7143, 130, -41.4286, 437.143, -42.8571, 632.857, -42.8571, 670, -44.2857, 674.286, -51.4286, 665.714, -70, 261.429, -77.1429, 117.143, -70, 105.714, -52.8571, 107.143, 62.8572, 108.571, 150, 108.571, 224.286, 108.571, 247.143, 102.857, 254.286, 102.857, 328.571, 102.857, 371.429 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 95.7143, 445.714, 91.4286, 470, 107.143, 481.429, 640, 477.143, 644.286, -1.42857, 671.429, 0, 672.857, -18.5714, 627.143, -18.5714, 624.286, -11.4286, 618.571, 438.571, 612.857, 442.857, 227.143, 444.286, 227.143, 330, 210, 327.143, 204.286, 331.429, 205.714, 442.857 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 260, 360, 282.857, 360, 282.857, 314.286, 492.857, 315.714, 497.143, 295.714, 282.857, 295.714, 281.429, 272.857, 277.143, 158.571, 290, 157.143, 291.429, 138.571, 158.571, 138.571, 158.571, 157.143, 158.571, 202.857, 207.143, 205.714, 208.571, 282.857, 157.143, 282.857, 154.286, 445.714, 178.571, 445.714, 180, 308.571, 222.857, 305.714, 227.143, 237.143, 227.143, 185.714, 181.429, 184.286, 177.143, 158.571, 257.143, 158.571, 257.143, 348.571 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 254.286, 384.286, 254.286, 407.143, 437.143, 410, 437.143, 357.143, 517.143, 355.714, 515.714, 412.857, 564.286, 411.429, 567.143, 447.143, 590, 445.714, 588.571, 390, 535.714, 390, 537.143, 295.714, 517.143, 297.143, 517.143, 337.143, 417.143, 337.143, 417.143, 387.143 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 311.429, 262.857, 388.571, 264.286, 390, 235.714, 331.429, 238.571, 334.286, 180, 274.286, 180, 275.714, 211.429, 310, 211.429 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 568.571, 357.143, 590, 357.143, 590, 194.286, 491.429, 192.857, 492.857, 161.429, 590, 162.857, 590, -48.5714, 565.714, -45.7143, 568.571, 82.8572, 538.571, 84.2857, 538.571, -10, 515.714, -10, 517.143, 37.1429, 468.571, 37.1429, 468.571, 85.7143, 441.429, 85.7143, 442.857, 8.57143, 487.143, 8.57143, 488.571, -14.2857, 414.286, -14.2857, 412.857, 34.2857, 212.857, 34.2857, 211.429, 55.7143, 265.714, 54.2857, 265.714, 87.1429, 180, 87.1429, 177.143, 7.14286, 322.857, 4.28571, 322.857, -10, 160, -10, 158.571, 108.571, 288.571, 107.143, 287.143, 55.7143, 415.714, 55.7143, 417.143, 110, 490, 110, 488.571, 68.5714, 518.571, 68.5714, 520, 108.571, 571.429, 108.571, 571.429, 140, 390, 138.571, 391.429, 85.7143, 314.286, 85.7143, 312.857, 150, 334.286, 151.429, 335.714, 108.571, 365.714, 108.571, 361.429, 207.143, 382.857, 207.143, 382.857, 161.429, 471.429, 161.429, 472.857, 211.429, 554.286, 211.429, 552.857, 244.286, 441.429, 241.429, 440, 198.571, 414.286, 198.571, 417.143, 264.286, 568.571, 265.714 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 467.143, 388.571, 465.714, 447.143, 487.143, 445.714, 487.143, 388.571 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 61.4286, -85.7143, 52.8571, -45.7143, 114.286, -44.2857, 128.571, -81.4286 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 107.143, 457.143, 88.5714, 465.714, 35.7143, 465.714, 31.4286, 495.714, 87.1429, 498.571, 104.286, 471.429, 108.571, 457.143 )

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 355.714, -54.2857, 357.143, 0, 380, 0, 380, -54.2857 )

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 648.571, 471.429, 632.857, 471.429, 630, 484.286, 752.857, 485.714, 758.572, -85.7143, 655.714, -78.5714, 665.714, -64.2857, 730, -68.5714, 730, 471.429 )

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 39.2727, 244.234, 17.4775, 249.484, -54.7489, 249.484, -68.1124, 256.006, -70.1806, 275.733, 38, 277.642, 39.1136, 272.233 )

[node name="CollisionPolygon2D14" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 39.0914, 59.6223, 9.41817, 61.0112, 5.25129, 89.2955, 39.0914, 87.2752 )

[node name="CollisionPolygon2D15" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( -144.631, 133.211, -143.83, 151.05, -102.138, 150.849, -101.336, 134.213 )

[node name="CollisionPolygon2D16" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( -207.596, 316.403, -207.329, 335.667, -171.61, 335.533, -161.042, 330.717, -161.443, 324.697, -172.011, 316.403 )

[node name="Casa 01" type="Sprite" parent="."]
position = Vector2( -94.2857, 201.429 )
texture = ExtResource( 5 )

[node name="YSort" type="YSort" parent="."]

[node name="Placa Madeira" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 350, 352.857 )

[node name="Lanterna3" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 368.571, -18.5714 )

[node name="Lanterna2" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 48.5714, 328.571 )

[node name="Lanterna" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 92.8571, 331.429 )

[node name="Player" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( -150, -10 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="Arvore1" type="Sprite" parent="."]
position = Vector2( 58.7752, 173.329 )
scale = Vector2( 1, 1 )
texture = ExtResource( 16 )

[node name="Arvore3" type="Sprite" parent="."]
position = Vector2( 714.973, 443.003 )
scale = Vector2( 1, 1 )
texture = ExtResource( 15 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Chaves" type="Control" parent="CanvasLayer"]
margin_right = 53.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChavesTexto" type="RichTextLabel" parent="CanvasLayer/Chaves"]
anchor_left = 6.024
anchor_right = 6.024
margin_left = -33.272
margin_top = 11.3033
margin_right = -3.272
margin_bottom = 34.3033
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
tab_size = 7
scroll_active = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Chaves"]
position = Vector2( 270.852, 18.0843 )
texture = ExtResource( 17 )

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 16.0

[node name="Chave2" parent="." instance=ExtResource( 6 )]
position = Vector2( 195.714, 432.857 )

[node name="Chave3" parent="." instance=ExtResource( 6 )]
position = Vector2( 455.714, 74.2857 )

[node name="Chave" parent="." instance=ExtResource( 6 )]
position = Vector2( 548.571, 432.857 )

[node name="Gato" parent="." instance=ExtResource( 13 )]
position = Vector2( 672.306, 380.162 )

[node name="Port√£o" parent="." instance=ExtResource( 7 )]
position = Vector2( 643.143, -30.7143 )
scale = Vector2( 1.03572, 1.69643 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -150, -10 )
scale = Vector2( 1, 1 )
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
smoothing_enabled = true
script = ExtResource( 3 )

[node name="Limits" type="Node" parent="Camera2D"]

[node name="TopLeft" type="Position2D" parent="Camera2D/Limits"]
position = Vector2( -159.472, -47.236 )

[node name="BottomRight" type="Position2D" parent="Camera2D/Limits"]
position = Vector2( 27, 329 )

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
material = SubResource( 2 )
margin_left = -366.0
margin_top = -284.0
margin_right = 365.0
margin_bottom = 298.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForestSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -17.068

[node name="Cama" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cama"]
position = Vector2( -197.611, -29.7317 )
shape = SubResource( 3 )

[node name="ArmarioDeLivros" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmarioDeLivros"]
position = Vector2( 16.415, -48.7399 )
shape = SubResource( 6 )

[node name="CaixaFechada" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaixaFechada"]
position = Vector2( 22.0486, 72.2205 )
shape = SubResource( 7 )

[node name="TV" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="TV"]
position = Vector2( -121.867, 116.255 )
shape = SubResource( 8 )

[node name="Telefone" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Telefone"]
position = Vector2( -217.425, 131.299 )
shape = SubResource( 9 )

[node name="Comoda" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Comoda"]
position = Vector2( -218.359, 64.6813 )
shape = SubResource( 10 )

[node name="Fotografias" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fotografias"]
position = Vector2( -172.055, 101.493 )
shape = SubResource( 11 )

[node name="StarComoda" parent="." instance=ExtResource( 18 )]
position = Vector2( -217.909, 60.161 )
scale = Vector2( 1, 1 )

[node name="StarArmarioDeLivros" parent="." instance=ExtResource( 18 )]
position = Vector2( 16.5885, -42.9286 )
scale = Vector2( 1, 1 )

[node name="StarCaixaFechada" parent="." instance=ExtResource( 18 )]
position = Vector2( 22.3158, 70.9791 )
scale = Vector2( 1, 1 )

[node name="StarFotografias" parent="." instance=ExtResource( 18 )]
position = Vector2( -172.727, 99.6151 )
scale = Vector2( 1, 1 )

[node name="StarTelefone" parent="." instance=ExtResource( 18 )]
position = Vector2( -217.22, 130.214 )
scale = Vector2( 1, 1 )

[node name="StarCama" parent="." instance=ExtResource( 18 )]
position = Vector2( -196.514, -25.7203 )

[node name="StarTV" parent="." instance=ExtResource( 18 )]
position = Vector2( -121.718, 113.373 )

[node name="StarMesa" parent="." instance=ExtResource( 18 )]
position = Vector2( -18.4068, 256.93 )
scale = Vector2( 1, 1 )

[node name="StarArmarioVazio" parent="." instance=ExtResource( 18 )]
position = Vector2( 3.75072, 311.598 )
scale = Vector2( 1, 1 )

[node name="Mesa" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mesa"]
position = Vector2( -17.5388, 249.755 )
shape = SubResource( 12 )

[node name="ArmarioVazio" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmarioVazio"]
position = Vector2( 3.19746, 306.357 )
shape = SubResource( 13 )

[node name="StarCabeceira" parent="." instance=ExtResource( 18 )]
position = Vector2( -213.231, 450.793 )

[node name="Cabeceira" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cabeceira"]
position = Vector2( -212.416, 453.695 )
shape = SubResource( 14 )

[node name="PrimeiroPortao" parent="." instance=ExtResource( 19 )]
position = Vector2( 38.7351, 422.543 )
scale = Vector2( 0.822, 1 )

[node name="Area2D" parent="PrimeiroPortao" index="0"]
collision_layer = 128
collision_mask = 128

[node name="Placa" type="Area2D" parent="."]
position = Vector2( 350.022, 346.096 )
scale = Vector2( 1, 1 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placa"]
position = Vector2( 0, -7.37006 )
shape = SubResource( 15 )

[node name="StarPlaca" parent="." instance=ExtResource( 18 )]
position = Vector2( 350.022, 346.096 )

[node name="StarGato" parent="." instance=ExtResource( 18 )]
position = Vector2( 672.638, 388.765 )

[connection signal="area_entered" from="ExternalArea" to="Camera2D" method="_on_ExternalArea_area_entered"]
[connection signal="area_entered" from="InternalArea" to="Camera2D" method="_on_InternalArea_area_entered"]
[connection signal="area_entered" from="Gato/Gato" to="." method="_on_Gato_area_entered"]
[connection signal="area_entered" from="Cama" to="." method="_on_Cama_area_entered"]
[connection signal="area_entered" from="ArmarioDeLivros" to="." method="_on_ArmarioDeLivros_area_entered"]
[connection signal="area_entered" from="CaixaFechada" to="." method="_on_CaixaFechada_area_entered"]
[connection signal="area_entered" from="TV" to="." method="_on_TV_area_entered"]
[connection signal="area_entered" from="Telefone" to="." method="_on_Telefone_area_entered"]
[connection signal="area_entered" from="Comoda" to="." method="_on_Comoda_area_entered"]
[connection signal="area_entered" from="Fotografias" to="." method="_on_Fotografias_area_entered"]
[connection signal="area_entered" from="Mesa" to="." method="_on_Mesa_area_entered"]
[connection signal="area_entered" from="ArmarioVazio" to="." method="_on_ArmarioVazio_area_entered"]
[connection signal="area_entered" from="Cabeceira" to="." method="_on_Cabeceira_area_entered"]
[connection signal="area_entered" from="PrimeiroPortao/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Placa" to="." method="_on_Placa_area_entered"]

[editable path="Gato"]
[editable path="PrimeiroPortao"]
